# NNFE

./: .gitignore  .pre-commit-config_broken.yaml  404.html  CITATION.cff  CONTRIBUTING.md  README.md  _config_broken.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check_formatting.yml  deploy.yml  docker-image.yml  github-actions-demo.yml  pypi.yml  test_package.yml
Cardiac_NNFE.egg-info/: PKG-INFO  SOURCES.txt
NNFE.egg-info/: PKG-INFO  SOURCES.txt
api/config/: index.html
api/main_functionality/: index.html
api/ml/: index.html
api/networks/: index.html
api/plotter/: index.html
api/project_manager/: index.html
api/sampling/: index.html
demos/: PS_test.py  cube_test.py  example.py  fe_input_file.yaml  test_params.yaml  view_mesh.py
demos/active_myo/: example.py  fibers_check.vtu  ml_input_file.yaml  test_params.yaml
demos/dirichlet/: example.py  vis.py
demos/haptic/: example.py  fe_input_file.yaml  fix.py  test_params.yaml
demos/hyperelastic/: example.py  test_params.yaml  vis.py
demos/laplacian/: example.py  fe_input_file.yaml  label_rect.py  test_params.yaml
demos/msh/: LV_mesh.h5  LV_mesh.xdmf  box.msh  endo.h5  endo.xdmf  epi.h5  epi.xdmf  mesh.h5  mesh.xdmf  preferred_direction.h5  preferred_direction.xdmf
demos/passive_myo/: example.py  fibers_check.vtu  vis.py
demos/prolate_spheroid/: LV.vtk  check_test.py  fe_test.py  main.py  pv_check.py  pv_movie.py
docs/: Overview.md  help.txt  index.md  networks.md
docs/api/: config.md  main_functionality.md  ml.md  networks.md  plotter.md  project_manager.md  sampling.md
docs/demo/: demo_cardiax_hyperelasticity.py  demo_hyperelasticity.py
docs/source/: conf.py  jax_fem.rst  jaxfemdemos.rst  jupytext_process.py  tests.benchmarks.hyperelasticity.rst  tests.benchmarks.linear_elasticity_cube.rst  tests.benchmarks.live_pressure.rst  tests.benchmarks.nodal_stress.rst
docs/tutorials/: 01_introduction.md  configurations.md  overview.md  prolate_spheroid.md
execs/: gen_data.sh  get_problem.sh  sol.vtu  solve.sh  temp.txt  test.py  train.sh
javascripts/: mathjax.js
nnfe/: FE_base.py  FE_helpers.py  NN_helpers.py  check.py  env_var.py  fe_input_file.yaml  ml.py  networks.py  nnfe_object.py  plotting.py  problem_setup.py  sampling.py  solve.py  test_params.yaml  train.py  utils.py
nnfe/control/: essential_bcs.py  natural.py  natural_bcs.py
nnfe/templates/: Neumann.yaml  PS.yaml  VHL.yaml
problems/Dirichlet/: main.py  params.yaml  setup.py
problems/LV/: check.py  create_mesh.py  main.py  params.yaml  setup.py  sim.py
problems/Neumann/: Pressure_max_3.vtu  check.py  main.py  model.py  params.yaml  setup.py
problems/PS/: LV_mesh.h5  Sim.vtu  check.py  create_PS.py  setup.py  (+6 more)
search/: search_index.json
stylesheets/: extra.css
(+106 files in other folders)
